--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "react": "^16.8.6",
     "react-cx": "^0.1.12",
     "react-dom": "^16.8.6",
+    "react-intl": "^3.1.6",
     "react-maskedinput": "^4.0.1",
     "react-popup": "^0.10.0",
     "react-redux": "^7.1.0",
